# SubversionRando

./: .gitignore  LICENSE  Main.py  areaRando.py  combined_area_logic.py  combined_location_logic.py  connection_data.py  daphne_gate_types.py  door_logic.py  fillAssumed.py  fillForward.py  fillInterface.py  fillMajorMinor.py  fillMedium.py  fillSpeedrun.py  flaskapp.py  game.py  gui.py  gui_scroll_frame.py  hints.py  index.html  index.js  index.py  item_data.py  loadout.py  location_data.py  logic.py  logicCasual.py  logicCommon.py  logicExpert.py  logicExpertArea.py  logicInterface.py  logic_area.py  logic_area_shortcuts.py  logic_expert.py  logic_expert_area.py  logic_locations.py  logic_presets.py  logic_shortcut.py  logic_shortcut_data.py  (+18 more)
.github/workflows/: testing.yaml
roms/: rom_readme.txt
spoilers/: spoilers_readme.txt
src/: Main.py  gui.py  gui_toggled_frame.py  index.py  local_generation.py  mass_analyzer.py  mass_generator.py  tracker.py
src/subversion_rando/: Main.py  __init__.py  areaRando.py  area_blitz.py  area_rando_types.py  connection_data.py  daphne_gate.py  daphne_gate_types.py  door_logic.py  fillAssumed.py  fillForward.py  fillInterface.py  fillMajorMinor.py  fillMedium.py  fillSpeedrun.py  game.py  goal.py  goals.py  hints.py  ips.py  item_data.py  item_marker.py  loadout.py  location_data.py  logicCommon.py  logic_area.py  logic_area_shortcuts.py  logic_boss_kill.py  logic_boss_reach.py  logic_goal.py  logic_locations.py  logic_presets.py  logic_shortcut.py  logic_shortcut_data.py  logic_updater.py  main_generation.py  (+16 more)
tests/: test_door_logic.py  test_game.py  test_goal.py  test_loadout.py  test_location_data.py  test_logic.py  test_logic_boss.py  test_logic_boss_kill.py  test_logic_presets.py  test_logic_shortcuts.py  test_main_generation.py  test_terrain_patch_data.py  test_tracker.py  test_web.py  utils.py
(+2 files in other folders)
