[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subversion_rando"
version = "0.7.0"
authors = [
  { name="beauxq" },
  { name="randorandy" },
  { name="strotlog" },
]
description = "randomizer for Super Metroid: Subversion"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SubversionRando/SubversionRando"
"Bug Tracker" = "https://github.com/SubversionRando/SubversionRando/issues"
