[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subversion_rando"
version = "0.9.2"
authors = [
  { name="beauxq" },
  { name="randorandy" },
  { name="strotlog" },
]
description = "randomizer for Super Metroid: Subversion"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SubversionRando/SubversionRando"
"Bug Tracker" = "https://github.com/SubversionRando/SubversionRando/issues"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]

typeCheckingMode = "strict"

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "ANN", "E", "F", "W", "A"]
ignore = [
    "ANN101",
    "ANN102",
    "E714",  # `is not`
]

[tool.ruff.lint.per-file-ignores]
"src/subversion_rando/terrain_patch_data.py" = ["E501"]
"tests/test_logic.py" = ["B023"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
